--- a/frontend/src/app/components/dashboard/buy-points-modal/buy-points-modal.component.html
+++ b/frontend/src/app/components/dashboard/buy-points-modal/buy-points-modal.component.html
@@ -96,3 +96,18 @@
     </div>
   </div>
 </div>
+
+<!-- Toast de Sucesso -->
+<div 
+  id="toastCompraSucesso"
+  class="toast align-items-center text-white bg-success border-0 position-fixed bottom-0 end-0 m-3"
+  role="alert" 
+  aria-live="assertive" 
+  aria-atomic="true">
+  <div class="d-flex">
+    <div class="toast-body">
+      Compra realizada com sucesso!
+    </div>
+    <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Fechar"></button>
+  </div>
+</div>
